--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
   audioplayers: ^0.19.1
+  rflutter_alert: ^2.0.2
 
 dev_dependencies:
   flutter_test:
